# ore-benches

./: BENCHMARKS-120m.md  BENCHMARKS.md  Cargo.toml  README.md  README_REPORT.md  docker-compose.yml  mise.toml  report_benchmarks.py
benches/: exact.rs  exact_lookup.rs  match.rs  ore.rs
report/: BENCHMARK_REPORT.md  README.md
results/ingest/: encrypt_int_combined.json  encrypt_json_large_combined.json  encrypt_json_small_combined.json  encrypt_ste_vec_large_combined.json  encrypt_ste_vec_small_combined.json  encrypt_ste_vec_small_gin_hyperfine.json  encrypt_string_combined.json
results/query/: exact_rows_10000.json  exact_rows_100000.json  exact_rows_1000000.json  exact_rows_10000000.json  match_rows_10000.json  match_rows_100000.json  match_rows_1000000.json  match_rows_10000000.json  ore_rows_10000.json  ore_rows_100000.json  ore_rows_1000000.json
sql/: schema.sql
sql/indexes/: integer_encrypted_10000000_down.sql  integer_encrypted_10000000_up.sql  integer_encrypted_1000000_down.sql  integer_encrypted_1000000_up.sql  integer_encrypted_100000_down.sql  integer_encrypted_100000_up.sql  integer_encrypted_10000_down.sql  integer_encrypted_10000_up.sql  integer_encrypted_down.sql  integer_encrypted_up.sql  json_ste_vec_small_encrypted_down.sql  json_ste_vec_small_encrypted_up.sql  ste_vec_small_encrypted_10000000_down.sql  ste_vec_small_encrypted_10000000_up.sql  ste_vec_small_encrypted_1000000_down.sql  ste_vec_small_encrypted_1000000_up.sql  ste_vec_small_encrypted_100000_down.sql  ste_vec_small_encrypted_100000_up.sql  ste_vec_small_encrypted_10000_down.sql  ste_vec_small_encrypted_10000_up.sql  string_encrypted_10000000_down.sql  string_encrypted_10000000_up.sql  string_encrypted_1000000_down.sql  string_encrypted_1000000_up.sql  string_encrypted_100000_down.sql  string_encrypted_100000_up.sql  string_encrypted_10000_down.sql  string_encrypted_10000_up.sql  string_encrypted_down.sql  string_encrypted_up.sql
src/: lib.rs  main.rs
