[package]
name = "dbbenches"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres", "json" ] }
tokio = { version = "1.47.1", features = ["full"] }
criterion = { version = "0.4.0", features = [ "async_tokio" ]}
criterion-table = "0.4.2"
ore-rs = "0.7.0"
hex = "0.4.3"
hex-literal = "0.3.4"
rand = "0.8.5"
cipherstash-client = { path = "../cipherstash-suite/packages/cipherstash-client", features = ["tokio"] }
anyhow = "1.0"
serde_json = "1.0"

[[bin]]
name = "generate_data"
path = "src/bin/generate_data.rs"

[[bin]]
name = "encrypt_data"
path = "src/bin/encrypt_data.rs"

[[bench]]
name = "exact_lookup"
harness = false
