[package]
name = "dbbenches"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres", "json" ] }
tokio = { version = "1.47.1", features = ["full"] }
criterion = { version = "0.4.0", features = [ "async_tokio" ]}
criterion-table = "0.4.2"
ore-rs = "0.7.0"
hex = "0.4.3"
hex-literal = "0.3.4"
rand = "0.8.5"
cipherstash-client = { version = "0.32.2", features = ["tokio"] }
anyhow = "1.0"
serde_json = "1.0"
fake = "4.4.0"

[[bin]]
name = "generate_data"
path = "src/bin/generate_data.rs"

[[bin]]
name = "encrypt_int"
path = "src/bin/encrypt_int.rs"

[[bin]]
name = "encrypt_string"
path = "src/bin/encrypt_string.rs"

[[bench]]
name = "exact_lookup"
harness = false
